[tool.poetry]
name = "riberry_web"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
riberry = "^0.10.8"
fastapi = {version = "^0.38.1",extras = ["all"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
