[tool.poetry]
name = "riberry_web"
version = "0.1.2"
description = ""
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
riberry = "^0.10.21"
fastapi = {version = "^0.45.0", extras = ["all"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
