[tool.poetry]
name = "riberry_web"
version = "0.1.2"
description = ""
authors = ["Shady Rafehi <shadyrafehi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
riberry = {git = "https://github.com/srafehi/riberry.git", branch = "develop"}
fastapi = {version = "^0.58.0", extras = ["all"]}
autogqla = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
